--- a/css/devranter.css
+++ b/css/devranter.css
@@ -10,7 +10,7 @@
 
 .dev-single-outer {
     border:1px solid #000;
-    padding: 0 10px 10px 10px;
+    padding: 0 10px 25px 10px;
     margin: 10px;
 }
 
@@ -48,7 +48,7 @@
     height:auto;
 }
 
-.devrant-copy { opacity: .35;  float: right; }
+.devrant-copy { opacity: .35;  float: right; margin-bottom: 15px; }
 .devrant-copy:hover { opacity: .75; }
 .dev-widget-outer a, .dev-single-outer a, .devrant-copy a {
     color: #069;
